--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,98 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Unsubscibe Form</title>
+	<title>Form Upload</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="<%= baseurl() %>css/style.css">
 </head>
-<style type="text/css">
-	*{
-		box-sizing: border-box;
-	}
-	body{
-		margin: 0;
-		background: #E6E6E6;
-		position: relative;
-		min-height: 500px;
-		font-family: 'Montserrat', sans-serif;
-        font-size: .8em;
-	}
-	.wrapper{
-		position: relative;
-		margin: auto;
-		left: 0;
-		right: 0;
-		top: 0;
-		width: 100%;
-		min-height: 600px;
-	}
-	.title-unsubs{
-		position: absolute;
-		top: 0;
-		margin: auto;
-		width: 100%;
-		text-align: center;
-		color: #999999;
-	}
-	.containt{
-		position: absolute;
-		top: 0%; left: 0; right: 0; bottom: 0%;
-		margin: auto;
-		width: 60%;
-		height: 100%;
-		background: #ffffff;
-		border: 1px solid #c5c5c5;
-		border-radius: 5px;
-		padding: 20px 50px;
-		box-shadow: -1px 1px 12px rgba(0,0,0,0.3);
-	}
-	.myButton-submit{
-		padding: 8px 20px;
-		background: #70a143;
-		border: 2px solid #70a143;
-		font-size: 1em;
-		color: #ffffff;
-		cursor: pointer;
-	}
-	.myButton-submit:hover{
-		background: transparent;
-		color: #636161;
-	}
-    /*table list*/
-.full-tables{
-    width: 100%;
-  }
-  .full-tables tr th{
-    padding: 8px 10px;
-    background: #00a2cf;
-    color: #fff;
-    border-bottom: 2px solid #dfe8f1;
-  }
-  .full-tables tr td{
-    padding: 8px 10px;
-    /* background: #f2f9fa; */
-    border-bottom: 1px solid #dfe8f1;
-    color: #73879C;
-  }
-  .full-tables tr:hover{
-      background-color: #dcf7ff;
-  }
-  .numberofrows{
-    position: absolute;
-    left: 15px;
-    bottom: 10px;
-  }
-/*end table list*/
-	@media screen and (max-width: 650px){
-		.containt{
-			width: 94%;
-		}
-		select{
-			width: 94%;
-		}
-	}
-</style>
 <body>
 <div class="wrapper">
 	<div class="title-unsubs">
@@ -100,13 +14,14 @@
 			<!-- UNSUBSCRIBE FORM -->
 		</h2>
     </div>
-    <form ref='uploadForm' action="/save" method="POST" enctype="multipart/form-data">
+    <form ref='uploadForm' action="/excel/save" method="POST" enctype="multipart/form-data">
         <div class="containt">
             <table style="width: 100%; height: 100%;" cellspacing="0"cellpadding="0">
                 <tr>
                     <td style="text-align: center;">
-                        <p>Upload Files<input type="file" name="filexls"></p>
-                        <input type="submit" value="Upload" class="">
+                        <p>Upload Files</p>
+						<p><input type="file" name="filexls"></p>
+                        <input type="submit" value="Upload" class="myButton-submit">
                     </td>
                 </tr>
             </table>
