--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,32 @@
 *{
     box-sizing: border-box;
 }
+html{
+    min-height: 100%;
+    height: 100%;
+}
 body{
     margin: 0;
     background: #E6E6E6;
-    position: relative;
-    min-height: 500px;
     font-family: 'Montserrat', sans-serif;
-    font-size: .8em;
+    font-size: 1em;
+    height: 100%;
 }
 .wrapper{
     position: relative;
-    margin: auto;
+    margin: 0;
     left: 0;
     right: 0;
     top: 0;
     width: 100%;
+    max-width: 3100px;
     min-height: 600px;
+    height: 100%;
+}
+.fixMiddle{
+    position: fixed;
+    top:0; left: 0; right: 0; bottom: 0;
+    margin: auto;
 }
 .title-unsubs{
     position: relative
@@ -95,4 +105,51 @@ bottom: 10px;
     select{
         width: 94%;
     }
+}
+
+
+
+
+
+/* baru */
+.login-wrap{
+    position: relative;
+    top:0; left: 0; right: 0; bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #0094D8, #00AFA2);
+    -webkit-background: linear-gradient(to right, #0094D8, #00AFA2);
+    -o-background: linear-gradient(to right, #0094D8, #00AFA2);
+    -moz-background: linear-gradient(to right, #0094D8, #00AFA2);
+}
+.loginBoxsize{
+    width: 21%;
+    height: 55%;
+    border-radius: 8px;
+    background-color: #ffffff;
+}
+.loginBoxsize img{
+    width: 35%;
+    margin: 0 10px;
+}
+.headLogin,
+.bodyLogin,
+.bottomLogin{
+    width: 100%;
+    text-align: center;
+}
+.headLogin{
+    height: 20%;
+    padding: 10%;
+}
+.bodyLogin{
+    height: 60%;
+}
+.bodyLogin table{
+    width: 100%;
+    height: 100%;
+}
+.bottomLogin{
+    height: 20%;
 }
