--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,9 +21,9 @@
                 <table>
                     <tr>
                         <td>
-                            <p><input type="text" name="email" placeholder="Your Email" style="width: 60%;"></p>
-                            <p><input type="password" name="email" placeholder="Your password" style="width: 60%;"></p>
-                            <p><input type="submit" value="Login" style="width: 60%;" class="myButton-flat-green"></p>
+                            <p><input type="text" name="email" placeholder="Your Email"></p>
+                            <p><input type="password" name="email" placeholder="Your password"></p>
+                            <p><input type="submit" value="Login" class="myButton-flat-green"></p>
                         </td>
                     </tr>
                 </table>
