--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,14 +98,6 @@ bottom: 10px;
     color: #636161;
 }
 /*end table list*/
-@media screen and (max-width: 650px){
-    .containt{
-        width: 94%;
-    }
-    select{
-        width: 94%;
-    }
-}
 
 
 
@@ -146,10 +138,34 @@ bottom: 10px;
 .bodyLogin{
     height: 60%;
 }
+.bodyLogin input[type="text"],
+.bodyLogin input[type="password"],
+.bodyLogin input[type="submit"]{
+    width: 60%;
+}
 .bodyLogin table{
     width: 100%;
     height: 100%;
 }
 .bottomLogin{
     height: 20%;
+}
+
+
+@media screen and (max-width: 650px){
+    .containt{
+        width: 94%;
+    }
+    select{
+        width: 94%;
+    }
+    .loginBoxsize{
+        width: 90%;
+        height: 65%;
+    }
+    .bodyLogin input[type="text"],
+    .bodyLogin input[type="password"],
+    .bodyLogin input[type="submit"]{
+        width: 80%;
+    }
 }
