--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,22 +7,190 @@ html{
 }
 body{
     margin: 0;
-    background: #E6E6E6;
-    font-family: 'Montserrat', sans-serif;
+    background: #ffffff;
+    font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
     font-size: 1em;
     height: 100%;
 }
 .wrapper{
-    position: relative;
-    margin: 0;
+    position: relative;;
     left: 0;
     right: 0;
-    top: 0;
+    margin: auto;
     width: 100%;
-    max-width: 3100px;
-    min-height: 600px;
     height: 100%;
 }
+.wrapper .lSide,
+.wrapper .rSide{
+    float: left;
+}
+.containt{background: #ffffff; padding: 15px; position: relative;color: #959a9c;}
+.rSide{
+    position: relative;
+    right: 0;
+    margin: 0;
+    /* width: 90%; */
+    width: calc(100% - 100px);
+    min-height: 100%;
+    background: #F1F4F7;
+}
+.rSide .head .top-icon-menu{position: absolute; right: 30px; top: 10%; bottom: 10%; height: 80%;}
+.top-icon-menu ul li img{height: 20px; vertical-align: middle;}
+.top-icon-menu ul{ margin:0;}
+.top-icon-menu ul li{float: left; margin: 3px 0; padding: 8px; color: #ffffff; cursor: pointer;}
+.top-icon-menu ul li p,
+.top-icon-menu ul li a,
+.top-icon-menu ul li span,
+.top-icon-menu ul li b{color: #ffffff;}
+.top-icon-menu ul li:hover{background: #299a9a;}
+.top-icon-menu ul li.quicksearch:hover{background: transparent;}
+.notifnum{
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  border-radius: 50%;
+  background: red;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 1px solid #ffffff;
+  vertical-align: middle;
+  padding: 2px 0;
+}
+
+.lSide{
+    position: relative;
+    left: 0;
+    margin: 0;
+    /* width: 10%; */
+    width: 100px;
+    min-height: 100%;
+}
+.head{
+    padding: 0;
+    width: 100%;
+    position: relative;
+}
+.head>.logo{
+    /* width: 50%; */
+    width: 80%;
+    margin: 10px 10%;
+}
+.gradientl{
+    background: linear-gradient(to left, #0094D8, #a8cc5d);
+    -webkit-background: linear-gradient(to left, #0094D8, #a8cc5d);
+    -o-background: linear-gradient(to left, #0094D8, #a8cc5d);
+    -moz-background: linear-gradient(to left, #0094D8, #a8cc5d);
+}
+.gradientr{
+    background: linear-gradient(to right, #0094D8, #00AFA2);
+    -webkit-background: linear-gradient(to right, #0094D8, #00AFA2);
+    -o-background: linear-gradient(to right, #0094D8, #00AFA2);
+    -moz-background: linear-gradient(to right, #0094D8, #00AFA2);
+}
+.mainbox{
+    width: 100%;
+    padding: 10px 1%;
+    position: relative;
+    left: 0;
+    right: 0;
+    margin: auto;
+    float: left;
+}
+.top-info{
+    width: 100%;
+    display: block;
+  }
+  .top-info-box{color: #ffffff; width: calc(25% - 10px); margin: 5px; padding: 15px;}
+  .top-info-box.shadow.half:hover{
+    -webkit-box-shadow: 1px 1px 2px 0 #999;
+    -moz-box-shadow: 1px 1px 2px 0 #999;
+    box-shadow: 1px 1px 2px 0 #999;
+  }
+  .top-info-toggle{
+    width: 100%;
+    max-width: 100%;
+    padding: 10px 0;
+    text-align: center;
+    display: none;
+  }
+  .top-info-toggle img{
+    width: 30px;
+  }
+  .icon-info{width: 30%; text-align: center; float: left; margin-right: 5%;}
+  .icon-info img{height: 60px; vertical-align: middle;}
+  .field-info{width: 65%; float: left;}
+  /*.field-info p{position: absolute; left: 102%; bottom: 14%;}*/
+  
+
+.sidebar{
+    width: 100%;
+}
+.menu{
+    margin: 0;
+    padding: 5px 10px;
+}
+.menu li{
+    position: relative;
+    /* margin: 2px 0; 
+    padding: 6px 20px;*/
+    border: 1px solid #ffffff;
+    cursor: pointer;
+    list-style-type: none;
+
+    text-align: center;
+    margin: 2px 0;
+    padding: 6px 0;
+}
+.menu li:hover{
+    border: 1px solid #DFE8F1;
+    border-radius: 3px;
+}
+.menu li a,
+.menu li p{
+    color: #959a9c;
+    font-weight: normal;
+}
+.menu li img{
+    /* width: 25px; */ width: 60%; margin-right: 10px; vertical-align: middle;
+    display: inline-block;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+.menu li ul{
+    margin-left: 20px;
+}
+.submenu{
+    display: none;
+    padding: 0;
+    z-index: 10;
+    background: #ffffff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .fixMiddle{
     position: fixed;
     top:0; left: 0; right: 0; bottom: 0;
@@ -36,7 +204,7 @@ body{
     text-align: center;
     color: #999999;
 }
-.containt{
+/* .containt{
     position: relative;
     top: 0%; left: 0; right: 0; bottom: 0%;
     margin: auto;
@@ -48,7 +216,7 @@ body{
     padding: 20px 50px;
     box-shadow: -1px 1px 12px rgba(0,0,0,0.3);
     overflow: auto;
-}
+} */
 .myButton-submit{
     padding: 8px 20px;
     background: #70a143;
@@ -139,6 +307,7 @@ bottom: 10px;
     height: 60%;
 }
 .bodyLogin input[type="text"],
+.bodyLogin input[type="email"],
 .bodyLogin input[type="password"],
 .bodyLogin input[type="submit"]{
     width: 60%;
