--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,3 +18,4 @@ $(document).ready(function(){
 })
 </script>
 <script type="text/javascript" src="<% baseurl() %>js/resize.window.js"></script>
+<script type="text/javascript" src="<% baseurl() %>js/animate.js"></script>
