--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,14 +5,14 @@
     <ul class="menu">
         <li><a href="<%= baseurl() %>" class="size-std"><img src="<%= baseurl() %>images/icon/dashboard.png"> Dashboard</a></li>
         <li><p class="nopad accord size-std" href="#project"><img src="<%= baseurl() %>images/icon/project.png">Project</p>
-            <ul class="submenu" id="project">
+            <ul class="submenu size-std" id="project">
                 <li><a href="<%= baseurl() %>workflow/project/create">Create</a></li>
                 <li><a href="<%= baseurl() %>workflow/project/">View</a></li>
             </ul>
         </li>
         <!-- <li><a href="<%= baseurl() %>workflow/User" class="size-std"><img src="<%= baseurl() %>images/profile-blue.png">User</a></li> -->
         <li><p class="nopad accord size-std" href="#user"><img src="<%= baseurl() %>images/icon/profile-blue.png">User</p>
-            <ul class="submenu" id="user">
+            <ul class="submenu size-std" id="user">
                 <li><a href="<%= baseurl() %>workflow/User">User</a></li>
                 <li><a href="<%= baseurl() %>workflow/team">Team</a></li>
             </ul>
