--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -10,7 +10,7 @@
                 <li><a href="<%= baseurl() %>workflow/project/">View</a></li>
             </ul>
         </li>
-        <!-- <li><a href="<%= baseurl() %>workflow/User" class="size-std"><img src="<%= baseurl() %>images/profile-blue.png">User</a></li> -->
+        <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/project.png">Service</a></li>
         <li><p class="nopad accord size-std" href="#user"><img src="<%= baseurl() %>images/icon/profile-blue.png">User</p>
             <ul class="submenu size-std" id="user">
                 <li><a href="<%= baseurl() %>workflow/User">User</a></li>
