--- a/public/css/component.css
+++ b/public/css/component.css
@@ -198,6 +198,44 @@ h3.nopad{
 
 
 
+.checkboxtype1{
+	position: relative;
+
+}
+
+.checkboxtype1 input[type="checkbox"] {
+    display:none;
+}
+.checkboxtype1 input[type="checkbox"] + label {
+    cursor: pointer;
+}
+.checkboxtype1 input[type="checkbox"] + label span {
+    display:inline-block;
+    width:20px;
+    height:20px;
+    vertical-align:middle;
+    cursor:pointer;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.checkboxtype1 input[type="checkbox"] + label span {
+     background-color:#ffffff;
+     border:1px solid #D7DCDE;
+}
+
+.checkboxtype1 input[type="checkbox"]:checked + label span{
+	background-color: transparent;
+	background-image: url('http://localhost:8000/images/icon/checkbox-active-1.png');
+	width: 20px;
+	height: 20px;
+	background-size: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+}
 
 
 .success-checkmark {
