--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="<%= baseurl() %>css/style_button.css">
 	<link rel="stylesheet" href="<%= baseurl() %>css/component.css">
 	<link rel="stylesheet" href="<%= baseurl() %>css/responsive.css">
+	<link rel="stylesheet" href="<%= baseurl() %>css/chart.css">
 </head>
 <body>
 <div class="wrapper">
@@ -60,7 +61,43 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="cols-6 containt" style="margin: 20px 0;">
+				<div class="headtitle trans" style="margin-bottom: 0;">
+					<p class="size-head4 nopad">Service FIles</p>
+					<p class="size-std nopad">Little title</p>
+				</div>
+				<div style="width: 100%; height: 320px;">
+					<div class="chartbox">
+						<svg>
+							<g id="ciclePoint"></g>
+							<g id="value_v" class="textData" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle">
+						<!-- 		<text x="10" y="300" dx="0">0</text>
+								<text x="10" y="240" dx="0">20</text>
+								<text x="10" y="180" dx="0">40</text>
+								<text x="10" y="120" dx="0">60</text>
+								<text x="10" y="60" dx="0">80</text>
+								<text x="10" y="10" dx="0">100</text> -->
+							</g>
+							<g id="line_h" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle"></g>
+							<g id="value_h" class="textLabel" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle">
+								<!-- <text x="30" y="310">00</text>
+								<text x="110" y="310">01</text>
+								<text x="210" y="310">02</text>
+								<text x="310" y="310">03</text>
+								<text x="410" y="310">04</text>
+								<text x="490" y="310">05</text> -->
+							</g>
+							<g>
+								<!-- <path d="M 30 300 l 0 -300" stroke-linecap="butt" stroke="#999999" stroke-opacity="1" stroke-width="1" fill="none" style="stroke-linecap: butt;stroke-opacity: 1;fill: none;"></path> -->
+							</g>
+							<g>
+								<!-- <path d="M30,299.5L500,299.5" stroke-linecap="butt" stroke="#999999" stroke-opacity="1" stroke-width="1" fill="none" style="stroke-linecap: butt;stroke-opacity: 1;fill: none;"></path> -->
+							</g>
+							<polyline style="stroke: #5c59b0; stroke-width:2; fill:none;" miterlimit="10">
+						</svg>
+					</div>
+				</div>
+			</div>
 			<div class="cols-6" style="padding: 0 5px; margin: 10px 0;">
 				<div class="column" style="width: 100%; padding: 10px 0;">
 					<div class="spccols-2 delay square btn-icon-big" style="background-color: #ffffff; border: 1px solid #d6d5d5; text-align: center;">
@@ -70,7 +107,7 @@
 									<a href="<%= baseurl() %>delivery/Upload">
 										<img src="<%= baseurl() %>images/icon/project.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
 										<br><br>
-										<b>Delivery</b>
+										<b>Upload Delivery</b>
 									</a>
 								</td>
 							</tr>
@@ -83,7 +120,7 @@
 									<a href="<%= baseurl() %>service/Upload">
 										<img src="<%= baseurl() %>images/icon/project.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
 										<br><br>
-										<b>Service</b>
+										<b>Upload Service</b>
 									</a>
 								</td>
 							</tr>
@@ -96,4 +133,5 @@
 </div>
 </body>
 <% include ./partials/footer %>
+<script src="<% baseurl() %>js/chart.js" type="text/javascript"></script>
 </html>
