--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,5 +17,5 @@ $(document).ready(function(){
     })
 })
 </script>
-<script type="text/javascript" src="<% baseurl() %>js/resize.window.js"></script>
-<script type="text/javascript" src="<% baseurl() %>js/animate.js"></script>
+<script type="text/javascript" src="<%= baseurl() %>js/resize.window.js"></script>
+<script type="text/javascript" src="<%= baseurl() %>js/animate.js"></script>
