--- a/views/uploadservice.ejs
+++ b/views/uploadservice.ejs
@@ -29,14 +29,14 @@
             <div class="cols-12 column containt" style="margin: 10px 0; background-color: #ffffff;">
                 <div class="headtitle trans">
                     <p class="nopad size-head4" style="padding: 5px 15px; position: relative;">
-                        Upload Delivery Files
+                        Upload Services Files
                     </p>
                     <ul class="tab-image-setting nopad">
                         <li><img src="<%= baseurl() %>images/icon/arrow-up.png" class="btn-tab-toggle delay" href="assigntome"></li>
                     </ul>
                 </div>
                 <div class="cols-12" style="padding: 35px 0;">
-                    <form ref='uploadForm' action="/delivery/save" method="POST" enctype="multipart/form-data">
+                    <form ref='uploadForm' action="/service/save" method="POST" enctype="multipart/form-data">
                             <table style="width: 100%; height: 100%;" cellspacing="5"cellpadding="5">
                                 <!-- <tr>
                                     <td style="text-align: right;">
