--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
 			</div>
 			<div class="cols-6 containt" style="margin: 20px 0;">
 				<div class="headtitle trans" style="margin-bottom: 0;">
-					<p class="size-head4 nopad">Service FIles</p>
+					<p class="size-head4 nopad">Data Chart</p>
 					<p class="size-std nopad">Little title</p>
 				</div>
 				<div style="width: 100%; height: 320px;">
@@ -71,21 +71,9 @@
 						<svg>
 							<g id="ciclePoint"></g>
 							<g id="value_v" class="textData" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle">
-						<!-- 		<text x="10" y="300" dx="0">0</text>
-								<text x="10" y="240" dx="0">20</text>
-								<text x="10" y="180" dx="0">40</text>
-								<text x="10" y="120" dx="0">60</text>
-								<text x="10" y="60" dx="0">80</text>
-								<text x="10" y="10" dx="0">100</text> -->
 							</g>
 							<g id="line_h" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle"></g>
 							<g id="value_h" class="textLabel" font-size="12" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle">
-								<!-- <text x="30" y="310">00</text>
-								<text x="110" y="310">01</text>
-								<text x="210" y="310">02</text>
-								<text x="310" y="310">03</text>
-								<text x="410" y="310">04</text>
-								<text x="490" y="310">05</text> -->
 							</g>
 							<g>
 								<!-- <path d="M 30 300 l 0 -300" stroke-linecap="butt" stroke="#999999" stroke-opacity="1" stroke-width="1" fill="none" style="stroke-linecap: butt;stroke-opacity: 1;fill: none;"></path> -->
