--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -417,6 +417,7 @@ table td.center{text-align: center;}
 
 /*style form*/
 input[type="text"],
+input[type="number"],
 input[type="search"],
 input[type="password"],
 input[type="email"],
@@ -440,6 +441,7 @@ textarea{
 	font-family:Verdana, Geneva, sans-serif;
 }
 input[type="text"]:focus,
+input[type="number"]:focus,
 input[type="search"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
